<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar" />

    <!--content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/first_line_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            style="@style/Label"
            android:text="@string/checkbox" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/default_style" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/first_line_margin"
            android:checked="true"
            android:text="@string/custom_style"
            android:theme="@style/AppCheckBox" />

        <TextView
            style="@style/Label"
            android:text="@string/radio_button" />

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:theme="@style/AppRadioButton" />
        </RadioGroup>

        <TextView
            style="@style/Label"
            android:text="@string/switch_button" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/off"
            android:textOn="@string/on" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:theme="@style/AppSwitch"
            app:switchMinWidth="60dp" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>