<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/first_line_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
            style="@style/Label"
            android:text="@string/default_style" />

        <AutoCompleteTextView
            android:id="@+id/actv1"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_letter" />

        <TextView
            style="@style/Label"
            android:text="@string/custom_component" />

        <com.bookislife.kandroid365.widget.TagCompleteTextView
            android:id="@+id/actv2"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_tag" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
