<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar" />

    <!--content-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/first_line_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAlert"
                style="@style/RaisedButton"
                android:layout_marginTop="@dimen/half_line_margin"
                android:text="@string/alert" />

            <Button
                android:id="@+id/btnConfirm"
                style="@style/RaisedButton"
                android:layout_marginTop="@dimen/half_line_margin"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/btnCustomStyle"
                style="@style/RaisedButton"
                android:layout_marginTop="@dimen/half_line_margin"
                android:text="@string/custom_style" />

            <Button
                android:id="@+id/btnCustomComp"
                style="@style/RaisedButton"
                android:layout_marginTop="@dimen/half_line_margin"
                android:text="@string/custom_component" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>