<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar" />

    <!--content-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/first_line_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/Label"
                android:text="@string/animation" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="122dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/half_line_margin"
                android:layout_marginTop="@dimen/half_line_margin" />

            <Button
                android:id="@+id/btnShowXml"
                style="@style/RaisedButton"
                android:layout_marginTop="@dimen/half_line_margin"
                android:text="@string/show_xml_animation" />

            <Button
                android:id="@+id/btnShow"
                style="@style/RaisedButton"
                android:layout_marginTop="@dimen/half_line_margin"
                android:text="@string/show_programe_animation" />

            <TextView
                style="@style/Label"
                android:text="@string/rotate_animation" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="@dimen/avatar_small_size"
                android:layout_height="@dimen/avatar_small_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/half_line_margin"
                android:layout_marginTop="@dimen/half_line_margin"
                android:src="@drawable/rotate" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>