<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar" />

    <!--content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/first_line_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/textColorSecondary" />

        <Button
            android:id="@+id/btnAuto"
            style="@style/RaisedButton"
            android:layout_marginTop="@dimen/first_line_margin"
            android:text="@string/auto" />

        <Button
            android:id="@+id/btnDay"
            style="@style/RaisedButton"
            android:layout_marginTop="@dimen/first_line_margin"
            android:text="@string/day" />

        <Button
            android:id="@+id/btnNight"
            style="@style/RaisedButton"
            android:layout_marginTop="@dimen/first_line_margin"
            android:text="@string/night" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>